syntax = "proto3";

package device;

service DeviceService {
    rpc GetRawDevices (Unit) returns (RawDevices) {}
    rpc AddRawDevice (RawDevice) returns (Unit) {}
    rpc RemoveRawDevice (RawDeviceId) returns (Unit) {}
}

message Unit {}

message RawDeviceId {
    int32 value = 1;
}

message RawDevice {
    int32 parent_device_id = 1;
    int32 sub_device_id = 2;
    int32 sub_device_type = 3;
}

message RawDevices {
    repeated RawDevice devices = 1;
}